fix text alignment for event feed

--- a/react-app/src/components/Events/events.css
+++ b/react-app/src/components/Events/events.css
@@ -33,8 +33,10 @@
   text-decoration: none;
 
   display: flex;
-  /* justify-content: center; */
-  align-items: center; 
+  justify-content: space-between;
+  /* align-items: center;  */
+  flex-direction: column;
+  /* text-align: end; */
 
   /* background-color: #ffba08; */
   border: 1px gray solid;
@@ -43,6 +45,8 @@
 }
 
 .event-listings > div {
+  /* display: grid;
+  flex-direction: column; */
   text-align: start;
   /* background-color: green; */
 }
